--- a/package.json
+++ b/package.json
@@ -28,6 +28,14 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "customize-cra": "^1.0.0",
+    "eslint": "^8.8.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "prettier": "^2.5.1",
     "react-app-rewired": "^2.1.11",
     "typescript": "^4.5.5"
   },
