--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "jsxImportSource": "@emotion/react"
   },
   "include": [
     "src"
@@ -30,6 +31,7 @@
     "constants/*": ["constants/*"],
     "styles/*": ["styles/*"],
     "utils/*": ["utils/*"],
-    "hooks/*": ["hooks/*"]
+    "hooks/*": ["hooks/*"],
+    "layouts/*": ["layouts/*"]
   }
 }
