--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "bee-hooks": "^0.0.4",
     "emotion-normalize": "^11.0.1",
     "history": "^5.2.0",
     "react": "^17.0.2",
